update to Minum v5.0.0